test(DeezerClient): refactor to use HttpClient constructor of Deezer clients